# aoc-cli-cpp

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/aoc-cli/: Client.hpp  HtmlContent.hpp  HtmlFormatter.hpp  HttpsRequest.hpp  Printer.hpp  RequestManager.hpp  System.hpp
include/aoc-cli-cpp/: aoc-cli-cpp.hpp
include/aoc-cli-cpp/client/: HttpsRequest.hpp  Printer.hpp
source/: Client.cpp  HtmlContent.cpp  HtmlFormatter.cpp  HttpsRequest.cpp  Printer.cpp  RequestManager.cpp  aoc-cli-cpp.cpp  main.cpp
source/client/: CMakeLists.txt
src/: AocClient.cpp  AocClient.hpp  AocHttpsRequest.cpp  AocHttpsRequest.hpp  AocRequestManager.cpp  AocRequestManager.hpp  CMakeLists.txt  HtmlContent.cpp  HtmlContent.hpp  HtmlFormatter.cpp  HtmlFormatter.hpp  HttpsRequest.cpp  HttpsRequest.hpp  Printer.cpp  Printer.hpp  System.hpp  Throttler.cpp  Throttler.hpp  main.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.hpp  HtmlContent.hpp  HtmlFormatter.cpp  HtmlFormatter.hpp  HttpsRequest.cpp  Printer.cpp  RequestManager.cpp  RequestManager.hpp  System.hpp
test/: CMakeLists.txt
test/source/: aoc-cli-cpp_test.cpp  aoc-cli_test.cpp
